src/test/ui/did_you_mean/issue-40823.nll.stderr
error[E0596]: cannot borrow `*buf` as mutable, as it is behind a `&` reference
  --> $DIR/issue-40823.rs:3:5
   |
LL |     let mut buf = &[1, 2, 3, 4];
   |                   ------------- help: consider changing this to be a mutable reference: `&mut [1, 2, 3, 4]`
LL |     buf.iter_mut();
   |     ^^^ `buf` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
